Adding description to methods section

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -197,11 +197,6 @@
     "library(readxl)\n",
     "library(tidymodels)\n",
     "\n",
-    "# in order to underfit our data, we load a new library with the tools to do so, called caret\n",
-    "library(caret)\n",
-    "\n",
-    "set.seed(2022)\n",
-    "\n",
     "pulsar_data <- read_csv(\"https://raw.githubusercontent.com/glenren/dsci_100_group_24/main/HTRU_2.csv\", \n",
     "                        col_names = c(\"mean_int_prof\", \n",
     "                                      \"sd_int_prof\",\n",
@@ -279,9 +274,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we have 1,639 true pulsars, and 16,259 false candidates, we can see that our two classes are heavily imbalanced. We can solve this by refitting our data, either by 1. underfitting, which is to reduce the majority class to the size of the minority class, or 2. overfitting, which is to increased the minority class to the size of the majority class. Of course, there are drawbacks to both methods: underfitting leads to loss of information from the minority class, and the duplication of the minority class in overfitting can lead to our classifier seeming more accurate than it really is.\n",
+    "As we have 1,639 true pulsars, and 16,259 false candidates, we can see that our two classes are heavily imbalanced. We can solve this by refitting our data, either by 1.) underfitting or downsampling, which is to reduce the majority class to the size of the minority class, or 2.) overfitting or upsampling, which is to increase the minority class to the size of the majority class. Of course, there are drawbacks to both methods: underfitting leads to loss of information from the minority class, and the duplication of the minority class in overfitting can lead to our classifier seeming more accurate than it really is.\n",
     "\n",
-    "For our dataset, since we have a majority class of 16,259 observations, we chose to go with underfitting since overfitting would require having to run code on 32,518 observations which would take a long time (we attempted this but it timed out in the knn tuning stage). An underfitted dataset would only have 3,278 observations—a lot faster."
+    "For our dataset, since we have a majority class of 16,259 observations, we chose to go with underfitting since overfitting would require having to run code on 32,518 observations. This is a huge value, and would take a lot of time. An underfitted dataset would only have 3,278 observations, therefore it'll be far more efficient to choose this option."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: lattice\n",
+      "\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in order to underfit our data, we load a new library with the tools to do so, called caret\n",
+    "library(caret)"
    ]
   },
   {
@@ -613,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three variables with highest values (kurt_int_prof, mean_curve and skew_int_prof) from the percentage difference graph will then be used as our predictors for our data analysis. "
+    "The three variables with highest values (kurt_int_prof, mean_curve and skew_int_prof) from the percentage difference graph will then be used as our predictors for our data analysis. We will now build a recipe singling out these variables:"
    ]
   },
   {
@@ -645,36 +663,49 @@
    "source": [
     "set.seed(2022)\n",
     "\n",
-    "# build recipe for underfitted data\n",
     "pulsar_down_recipe <- recipe(class ~ kurt_int_prof + mean_curve + skew_int_prof,\n",
     "                       data = pulsar_down_train) %>%\n",
     "    step_scale(all_predictors()) %>%\n",
     "    step_center(all_predictors())\n",
-    "pulsar_down_recipe\n",
-    "\n",
-    "# create cross-validation for underfitted data\n",
-    "pulsar_down_vfold <- vfold_cv(pulsar_down_train, v = 5, strata = class)\n",
-    "\n",
-    "# build model \n",
-    "knn_tune <- nearest_neighbor(weight_func = 'rectangular', neighbors = tune()) %>%\n",
-    "    set_engine('kknn') %>%\n",
-    "    set_mode('classification') "
+    "pulsar_down_recipe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we go straight into building our classifier, we must first find an optimal value of k, or the number of neighbours. Therefore, we will perform a 5-fold cross-validation on our training data, to test the accuracy with different k-values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "set.seed(2022)\n",
-    "# underfitted data set results\n",
     "\n",
+    "# split our training data into 5 folds, preparing for cross-validation\n",
+    "pulsar_down_vfold <- vfold_cv(pulsar_down_train, v = 5, strata = class)\n",
+    "\n",
+    "# build tuning model\n",
+    "knn_tune <- nearest_neighbor(weight_func = 'rectangular', neighbors = tune()) %>%\n",
+    "    set_engine('kknn') %>%\n",
+    "    set_mode('classification')\n",
+    "\n",
+    "# run cross-validation and collect results \n",
     "knn_down_results <- workflow() %>%\n",
     "    add_recipe(pulsar_down_recipe) %>%\n",
     "    add_model(knn_tune) %>%\n",
     "    tune_grid(resamples = pulsar_down_vfold, grid = 10) %>%\n",
     "    collect_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, it's time to plot our results in order to decide on the optimal k-value:"
    ]
   },
   {
@@ -699,10 +730,11 @@
     }
    ],
    "source": [
-    "# evaluating classification model with underfitted data sets\n",
-    "\n",
+    "# filter for the accuracy reports only\n",
     "accuracies_down <- knn_down_results %>%\n",
     "    filter(.metric == \"accuracy\")\n",
+    "\n",
+    "# create a plot of estimated accuracy vs k-value\n",
     "cross_val_plot_down <- ggplot(accuracies_down, aes(x= neighbors, y=mean)) +\n",
     "    geom_point() +\n",
     "    geom_line() +\n",
@@ -718,7 +750,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our analysis, we will be using k = 12, since the accuracy estimate is at its highest at k = 12. "
+    "For our analysis, we will be using k = 11, since the accuracy estimate seems to be the highest between k-values 10-12. We choose 11 since it is in the middle of a good range: as the accuracy report is only an estimate, the actual estimate could different, and so we want to find a range of good values in our estimate and pick one in the middle of that range.\n",
+    "\n",
+    "Now that we've chosen our k-value, it's time to build our classifier. We can re-use our recipe here, but we build a new knn-model with our chosen k of 11 since our previous model was meant for tuning."
    ]
   },
   {
@@ -756,137 +790,98 @@
    "source": [
     "set.seed(2022)\n",
     "\n",
-    "knn_spec_down <- nearest_neighbor(weight_func = 'rectangular', neighbors = 12) %>%\n",
+    "# knn model using our chosen k-value\n",
+    "knn_spec_down <- nearest_neighbor(weight_func = 'rectangular', neighbors = 11) %>%\n",
     "    set_engine('kknn') %>%\n",
     "    set_mode('classification')\n",
     "\n",
+    "# build workflow using the new model\n",
     "pulsar_down_workflow <- workflow() %>%\n",
     "    add_recipe(pulsar_down_recipe) %>%\n",
     "    add_model(knn_spec_down)\n",
-    "pulsar_down_workflow"
+    "pulsar_down_workflow\n",
+    "\n",
+    "# run workflow on our training data\n",
+    "pulsar_down_fit <- pulsar_down_workflow %>%\n",
+    "    fit(data = pulsar_down_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we've built our classifier, it's time to test it using our testing data and see how accurate it is."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 2 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>accuracy</td><td>binary</td><td>0.9376528</td></tr>\n",
-       "\t<tr><td>kap     </td><td>binary</td><td>0.8753056</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 2 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " .metric & .estimator & .estimate\\\\\n",
-       " <chr> & <chr> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t accuracy & binary & 0.9376528\\\\\n",
-       "\t kap      & binary & 0.8753056\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 2 × 3\n",
-       "\n",
-       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| accuracy | binary | 0.9376528 |\n",
-       "| kap      | binary | 0.8753056 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  .metric  .estimator .estimate\n",
-       "1 accuracy binary     0.9376528\n",
-       "2 kap      binary     0.8753056"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`summarise()` ungrouping output (override with `.groups` argument)\n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in pulsar_down_fit %>% predict(pulsar_down_test) %>% bind_cols(pulsar_down_test) %>% : could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in pulsar_down_fit %>% predict(pulsar_down_test) %>% bind_cols(pulsar_down_test) %>% : could not find function \"%>%\"\nTraceback:\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 2 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>class</th><th scope=col>n</th><th scope=col>percent</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0</td><td>1230</td><td>50</td></tr>\n",
-       "\t<tr><td>1</td><td>1230</td><td>50</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 2 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " class & n & percent\\\\\n",
-       " <fct> & <int> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 0 & 1230 & 50\\\\\n",
-       "\t 1 & 1230 & 50\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 2 × 3\n",
-       "\n",
-       "| class &lt;fct&gt; | n &lt;int&gt; | percent &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| 0 | 1230 | 50 |\n",
-       "| 1 | 1230 | 50 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  class n    percent\n",
-       "1 0     1230 50     \n",
-       "2 1     1230 50     "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "set.seed(2022)\n",
     "\n",
-    "# fitting data to workflow\n",
-    "pulsar_down_fit <- pulsar_down_workflow %>%\n",
-    "    fit(data = pulsar_down_train)\n",
-    "\n",
+    "# summary of how well our classifier works on the testing data\n",
     "pulsar_down_summary <- pulsar_down_fit %>%\n",
     "    predict(pulsar_down_test) %>%\n",
     "    bind_cols(pulsar_down_test) %>%\n",
     "    metrics(truth = class, estimate = .pred_class)\n",
-    "pulsar_down_summary\n",
-    "\n",
+    "pulsar_down_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A 93.77% accuracy sounds quite good, but what does this value actually mean? How accurate is our classifier really? Let's compare it with the majority classifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#check majority class to compare\n",
     "pulsar_down_proportions <- pulsar_down_train %>%\n",
     "                      group_by(class) %>%\n",
     "                      summarize(n = n()) %>%\n",
     "                      mutate(percent = 100*n/nrow(pulsar_down_train))\n",
     "pulsar_down_proportions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we are testing on underfitted data, our data split is exactly 50/50, meaning that the accuracy of the majority classifier would be 50%. Our classifier is far more accurate than the majority classifier, which is great.\n",
+    "\n",
+    "Let's analyze the confusion matrix to see what our data is getting wrong, to see if there is a common fault within the classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set.seed(2022)\n",
+    "\n",
+    "# summary of what our data is getting wrong\n",
+    "conf_summary <- pulsar_down_fit %>%\n",
+    "    predict(pulsar_down_test) %>%\n",
+    "    bind_cols(pulsar_down_test) %>%\n",
+    "    conf_mat(truth = class, estimate = .pred_class)\n",
+    "conf_summary"
    ]
   },
   {
