added more explanation in methods

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -24,13 +24,22 @@
     "The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. \n",
     "\n",
     "\n",
-    "### Methods & Results (Bernie & Glen)\n",
-    "#### Load Data from Original Source on Web"
+    "### Methods & Results (Bernie & Glen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we will load our libraries and our data from the web.\n",
+    "\n",
+    "Since our data has inproperly formatted column names, we will give new names to each column, in the proper style of lowercase and underscores.\n",
+    "We must also change the \"class\" column into a factor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +146,8 @@
     "                                      \"skew_curve\",\n",
     "                                      \"class\") ) %>%\n",
     "                        mutate(class = as_factor(class))\n",
+    "\n",
+    "# preview our data by showing the first six observations\n",
     "head(pulsar_data)"
    ]
   },
@@ -144,12 +155,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Wrangling and Cleaning Data"
+    "Now that our data is looking clean, we can explore it. First, since our goal is to make a classifier deciding whether an observation is a true pulsar or a false candidate, we need to find out how our data is distributed in terms of each class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +205,10 @@
     "\n",
     "pulsar <- which(pulsar_data$class==\"1\") # making a list of all the entries with Class = 1 (a.k.a. true pulsars)\n",
     "false <- which(pulsar_data$class==\"0\")# making a list of all the entries with Class = 0 (a.k.a. false pulsar candidates)\n",
+    "\n",
+    "# count how many observations of each category we have\n",
     "length(pulsar)\n",
-    "length(false)\n",
-    "# here we can see how many observations of each category we have"
+    "length(false)"
    ]
   },
   {
@@ -205,12 +217,12 @@
    "source": [
     "As we have 1,639 true pulsars, and 16,259 false candidates, we can see that our two classes are heavily imbalanced. We can solve this by refitting our data, either by 1.) underfitting or downsampling, which is to reduce the majority class to the size of the minority class, or 2.) overfitting or upsampling, which is to increase the minority class to the size of the majority class. Of course, there are drawbacks to both methods: underfitting leads to loss of information from the minority class, and the duplication of the minority class in overfitting can lead to our classifier seeming more accurate than it really is.\n",
     "\n",
-    "For our dataset, since we have a majority class of 16,259 observations, we chose to go with underfitting since overfitting would require having to run code on 32,518 observations. This is a huge value, and would take a lot of time. An underfitted dataset would only have 3,278 observations, therefore it'll be far more efficient to choose this option."
+    "For our dataset, since we have a majority class of 16,259 observations, we will choose to downsample since upsampling would result in 32,518 observations. This is a huge value, and would take a lot of time to run code on. An underfitted dataset would only have 3,278 observations, therefore it'll be far more efficient to choose this option."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +297,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we have successfully created a new, downsampled dataset, and we can see that it has 1,639 observations of each class. We can proceed to splitting our newly refitted data into training and testing subsets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +891,7 @@
    "source": [
     "Since we are testing on underfitted data, our data split is exactly 50/50, meaning that the accuracy of the majority classifier would be 50%. Our classifier is far more accurate than the majority classifier, which is great.\n",
     "\n",
-    "Let's analyze the confusion matrix to see what our data is getting wrong, to see if there is a common fault within the classifier."
+    "Let's analyze the confusion matrix to see what our data is getting wrong, to see if there is a common mistake that the classifier makes."
    ]
   },
   {
