modified references section

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -1006,8 +1006,16 @@
     "    Bates, S.D., Bhat, N.D.R., Burgay, M. (2010). The High Time Resolution Universe Pulsar Survey — I. System configuration \n",
     "    and initial discoveries. Monthly Notices of the Royal Astronomical Society, 409(2), 619—627. Doi: 10.111/j.1365-\n",
     "    2966.2010.17325.x\n",
-    "\n"
+    "\n",
+    "Lyon, R. J. (2016). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
