updated intro + references

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -8,21 +8,17 @@
     "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
     "\n",
     "### Introduction\n",
-    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When a sun is sufficient of its hydrogen fuel, it counteracts the external gravitational force by creating pressure through constant nuclear reaction, thus reaching hydrostatic equilibrium. As these massive stars run out of their hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapsing. The force from the collapse merges every proton and electron within it into a neutron. \n",
-    "\n",
-    "Due to pulsars' nature of emitting rhythmic pulses of strong radiation because of their electromagnetism dipoles, they release light in regular intervals and look like they are twinkling when observed from earth. \n",
+    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When a sun is sufficient of its hydrogen fuel, it counteracts the external gravitational force by creating pressure through constant nuclear reaction, thus reaching hydrostatic equilibrium. As these massive stars run out of their hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapsing. The force from the collapse merges every proton and electron within it into a neutron.\n",
+    "Due to pulsars' nature of emitting rhythmic pulses of strong radiation because of their electromagnetism dipoles, they release light in regular intervals and look like they are twinkling when observed from earth. Pulsars are a main research interest within the scientific community because of their potential of helping us learn about space-time, the inter-stellar medium, and states of matter.\n",
     "\n",
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]” (Keith, 2010).\n",
-    "\n",
     "In this dataset, two main attributes are used to distinguish between the positive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon, 2016). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the density of electrons between the observer and observed candidate\", known as the dispersion measure, and the candidate's signal to noise ratio (Lyon, 2016). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
-    "\n",
     "- Mean\n",
     "- Standard Deviation\n",
     "- Skewness\n",
     "- Excess Kurtosis\n",
     "\n",
-    "Our predictive question is to classify the pulsar candidates as either real pulsars or false candidates caused by RFI and noise. A binary classification system will be used to represent whether the pulsar is real or not. With 16,259 false candidates and 1,639 real pulsars that are checked by humans, the real pulsars are a minority positive class, and false candidates are the majority negative class in this dataset. The class labels used are 0 (false candidate) and 1 (real pulsar).\n",
-    "The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. "
+    "Our predictive question is to classify the pulsar candidates as either real pulsars or false candidates caused by RFI and noise. A binary classification system will be used to represent whether the pulsar is real or not. With 16,259 false candidates and 1,639 real pulsars that are checked by humans, the real pulsars are a minority positive class, and false candidates are the majority negative class in this dataset. The class labels used are 0 (false candidate) and 1 (real pulsar). The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class.\n"
    ]
   },
   {
@@ -1007,7 +1003,9 @@
     "    and initial discoveries. Monthly Notices of the Royal Astronomical Society, 409(2), 619—627. Doi: 10.111/j.1365-\n",
     "    2966.2010.17325.x\n",
     "\n",
-    "Lyon, R. J. (2016). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n"
+    "Lyon, R. J. (2016). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n",
+    "\n",
+    "YouTube. (2020, September 18). How to resolve class imbalance in R. YouTube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=bWD9Bmrru44&amp;ab_channel=MarioCastro\n"
    ]
   },
   {
