final version hopefully!

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -8,11 +8,11 @@
     "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
     "\n",
     "### Introduction\n",
-    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When a sun is sufficient of its hydrogen fuel, it counteracts the external gravitational force by creating pressure through constant nuclear reaction, thus reaching hydrostatic equilibrium. As these massive stars run out of their hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapsing. The force from the collapse merges every proton and electron within it into a neutron.\n",
+    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When a sun has sufficient hydrogen fuel, it counteracts external gravitational force by creating pressure through constant nuclear reaction, thus reaching hydrostatic equilibrium. As these massive stars run out of hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapsing. The force from the collapse merges every proton and electron within it into a neutron (NASA, 2014).\n",
     "Due to pulsars' nature of emitting rhythmic pulses of strong radiation because of their electromagnetism dipoles, they release light in regular intervals and look like they are twinkling when observed from earth. Pulsars are a main research interest within the scientific community because of their potential of helping us learn about the inter-stellar medium, states of matter, and space-time (Agarwal et al., 2020)\n",
     "\n",
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]” (Keith, 2010).\n",
-    "In this dataset, two main attributes are used to distinguish between the positive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon, 2016). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the density of electrons between the observer and observed candidate, known as the dispersion measure, and the candidate's signal to noise ratio (Lyon, 2016). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
+    "In this dataset, two main attributes are used to distinguish between the positive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon, 2016a). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the density of electrons between the observer and observed candidate, known as the dispersion measure, and the candidate's signal to noise ratio (Lyon, 2016a). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
     "- Mean\n",
     "- Standard Deviation\n",
     "- Skewness\n",
@@ -996,18 +996,21 @@
     "### Works Cited\n",
     "Agarwal, N., Limam, M., Das, T. (2020, August 26). Predicting pulsar star: Pulsar candidates collected during the high time resolution universe survey. Kaggle. Retrieved April 9, 2022, from https://www.kaggle.com/datasets/colearninglounge/predicting-pulsar-starintermediate\n",
     "\n",
+    "Castro, M. (2020, September 18). How to resolve class imbalance in R. YouTube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=bWD9Bmrru44&amp;ab_channel=MarioCastro \n",
+    "\n",
     "Keith, M.J., Jameson, A., van Straten, W., Bailes, M., Johnston, S., Kramer, M., Possenti, A., \n",
     "    Bates, S.D., Bhat, N.D.R., Burgay, M. (2010). The High Time Resolution Universe Pulsar Survey — I. System configuration \n",
     "    and initial discoveries. Monthly Notices of the Royal Astronomical Society, 409(2), 619—627. Doi: 10.111/j.1365-\n",
     "    2966.2010.17325.x\n",
     "    \n",
-    "Lyon, R.J., Stappers, B.W., Cooper, S., Brooke, J.M., Knowles, J.D. (2016). Fifty years of pulsar \n",
+    "Lyon, R. J. (2016a). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n",
+    "    \n",
+    "Lyon, R.J., Stappers, B.W., Cooper, S., Brooke, J.M., Knowles, J.D. (2016b). Fifty years of pulsar \n",
     "    candidate selection: From simple filters to a new principled real-time classification approach. Monthly Notices of the \n",
     "    Royal Astronomical Society, 459(1), 1104—1123. Doi: 10.1093/mnras/stw656. \n",
     "\n",
-    "Lyon, R. J. (2016). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n",
-    "\n",
-    "YouTube. (2020, September 18). How to resolve class imbalance in R. YouTube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=bWD9Bmrru44&amp;ab_channel=MarioCastro\n"
+    "NASA. (2014, February 10). NASA | What is a pulsar? Youtube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=gjLk_72V9Bw&ab_channel=NASAGoddard\n",
+    "\n"
    ]
   },
   {
