fixed markdown formatting

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 1. First six observations of pulsar_data_"
+    "_Figure 1. First six observations of pulsar\\_data_"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 2. Variable Averages of pulsar_data based on class._"
+    "_Figure 2. Variable Averages of pulsar\\_data based on class._"
    ]
   },
   {
@@ -289,9 +289,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the mean values for _mean_curve_, _mean_int_prof_, _sd_curve_, and _skew_curve_ seem to have the steepest difference between pulsar and non-pulsar observations (Figure 3). However, the data isn't scaled, which means that data points that are measured on a higher order of magnitude due to their unit of measurement might have a higher raw difference, but a lower relative difference than other variables. In order to see which variables vary the most between classes, we will examine the relative differences in value. \n",
+    "We can see that the mean values for _mean\\_curve_, _mean\\_int\\_prof_, _sd\\_curve_, and _skew\\_curve_ seem to have the steepest difference between pulsar and non-pulsar observations (Figure 3). However, the data isn't scaled, which means that data points that are measured on a higher order of magnitude due to their unit of measurement might have a higher raw difference, but a lower relative difference than other variables. In order to see which variables vary the most between classes, we will examine the relative differences in value. \n",
     "\n",
-    "Next, we'll take a look at the relative differences in value between the two classes for each variable to find out which variables vary the most between classes. To do this, we take our original pulsar_averages summary table (the untidy version) and find the percentage differences between the two rows. Like the averages table (figure 2), the differences table is visualized by a bar graph (figure 5), with the data first being tidied (figure 4)."
+    "Next, we'll take a look at the relative differences in value between the two classes for each variable to find out which variables vary the most between classes. To do this, we take our original pulsar\\_averages summary table (the untidy version) and find the percentage differences between the two rows. Like the averages table (figure 2), the differences table is visualized by a bar graph (figure 5), with the data first being tidied (figure 4)."
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 4. Difference (percentage) between average variable values of the two classes of pulsar_data._"
+    "_Figure 4. Difference (percentage) between average variable values of the two classes of pulsar\\_data._"
    ]
   },
   {
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three variables with highest values from Figure 5 (_kurt_int_prof_, _mean_curve_ and _skew_int_prof_) will then be used as predictors for our data analysis. _kurt_int_prof_ indicates the excess kurtosis of the integrated profile, _skew_int_prof_ indicates the skewness of the integrated profile, and _mean_curve_ indicates the mean of the DM-SNR curve.\n",
+    "The three variables with highest values from Figure 5 (_kurt\\_int\\_prof_, _mean\\_curve_ and _skew\\_int\\_prof_) will then be used as predictors for our data analysis. _kurt\\_int\\_prof_ indicates the excess kurtosis of the integrated profile, _skew\\_int\\_prof_ indicates the skewness of the integrated profile, and _mean\\_curve_ indicates the mean of the DM-SNR curve.\n",
     "\n",
     "However, before we can start our classifier, we must check how our data is distributed in terms of each class. This is to avoid class imbalance, which will interfere with our classifier's accuracy."
    ]
@@ -578,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 6. Summary Table of pulsar_down._"
+    "_Figure 6. Summary Table of pulsar\\_down._"
    ]
   },
   {
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 9. Proportions of the classes in pulsar_down._"
+    "_Figure 9. Proportions of the classes in pulsar\\_down._"
    ]
   },
   {
