fixed formatting (final)

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three variables with highest values from Figure 5 (*kurt\\_int\\_prof*, *mean\\_curve* and *skew\\_int\\_prof_) will then be used as predictors for our data analysis. _kurt\\_int\\_prof_ indicates the excess kurtosis of the integrated profile, _skew\\_int\\_prof_ indicates the skewness of the integrated profile, and _mean\\_curve_ indicates the mean of the DM-SNR curve.\n",
+    "The three variables with highest values from Figure 5 (*kurt\\_int\\_prof*, *mean\\_curve* and *skew\\_int\\_prof*) will then be used as predictors for our data analysis. *kurt\\_int\\_prof* indicates the excess kurtosis of the integrated profile, *skew\\_int\\_prof* indicates the skewness of the integrated profile, and *mean\\_curve* indicates the mean of the DM-SNR curve.\n",
     "\n",
     "However, before we can start our classifier, we must check how our data is distributed in terms of each class. This is to avoid class imbalance, which will interfere with our classifier's accuracy."
    ]
@@ -578,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 6. Summary Table of pulsar\\_down._"
+    "*Figure 6. Summary Table of pulsar\\_down.*"
    ]
   },
   {
@@ -853,7 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 8. Accuracy summary of our pulsar candidate classifier._"
+    "*Figure 8. Accuracy summary of our pulsar candidate classifier.*"
    ]
   },
   {
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 9. Proportions of the classes in pulsar\\_down._"
+    "*Figure 9. Proportions of the classes in pulsar\\_down.*"
    ]
   },
   {
@@ -979,7 +979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Figure 10. Confusion matrix of our pulsar candidate classifier._"
+    "*Figure 10. Confusion matrix of our pulsar candidate classifier.*"
    ]
   },
   {
