--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -12,7 +12,7 @@
     "Due to pulsars' nature of emitting rhythmic pulses of strong radiation because of their electromagnetism dipoles, they release light in regular intervals and look like they are twinkling when observed from earth. Pulsars are a main research interest within the scientific community because of their potential of helping us learn about the inter-stellar medium, states of matter, and space-time (Agarwal et al., 2020)\n",
     "\n",
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]” (Keith, 2010).\n",
-    "In this dataset, two main attributes are used to distinguish between the positive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon, 2016a). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the density of electrons between the observer and observed candidate, known as the dispersion measure, and the candidate's signal to noise ratio (Lyon, 2016a). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
+    "In this dataset, two main attributes are used to distinguish between the positive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon, 2016). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the density of electrons between the observer and observed candidate, known as the dispersion measure, and the candidate's signal to noise ratio (Lyon, 2016). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
     "- Mean\n",
     "- Standard Deviation\n",
     "- Skewness\n",
@@ -1007,22 +1007,22 @@
    "metadata": {},
    "source": [
     "### Works Cited\n",
-    "Agarwal, N., Limam, M., Das, T. (2020, August 26). Predicting pulsar star: Pulsar candidates collected during the high time resolution universe survey. Kaggle. Retrieved April 9, 2022, from https://www.kaggle.com/datasets/colearninglounge/predicting-pulsar-starintermediate\n",
+    "Agarwal, N., Limam, M., Das, T. (2020, August 26). *Predicting pulsar star: Pulsar candidates collected during the high time resolution universe survey.* Kaggle. https://www.kaggle.com/datasets/colearninglounge/predicting-pulsar-starintermediate.\n",
     "\n",
-    "Castro, M. (2020, September 18). How to resolve class imbalance in R. YouTube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=bWD9Bmrru44&amp;ab_channel=MarioCastro \n",
+    "Castro, M. [Mario Castro]. (2020, September 18). How to resolve class imbalance in R [Video]. YouTube. https://www.youtube.com/watch?v=bWD9Bmrru44&amp;ab_channel=MarioCastro.\n",
     "\n",
-    "Keith, M.J., Jameson, A., van Straten, W., Bailes, M., Johnston, S., Kramer, M., Possenti, A., \n",
-    "    Bates, S.D., Bhat, N.D.R., Burgay, M. (2010). The High Time Resolution Universe Pulsar Survey — I. System configuration \n",
-    "    and initial discoveries. Monthly Notices of the Royal Astronomical Society, 409(2), 619—627. Doi: 10.111/j.1365-\n",
+    "Keith, M. J., Jameson, A., van Straten, W., Bailes, M., Johnston, S., Kramer, M., Possenti, A., \n",
+    "    Bates, S. D., Bhat, N. D. R., Burgay, M. (2010). *The High Time Resolution Universe Pulsar Survey — I. System configuration \n",
+    "    and initial discoveries.* Monthly Notices of the Royal Astronomical Society, 409(2), 619—627. Doi: 10.111/j.1365-\n",
     "    2966.2010.17325.x\n",
     "    \n",
-    "Lyon, R. J. (2016a). Why are pulsars hard to find?. The University of Manchester (United Kingdom).\n",
+    "Lyon, R. J. (2016). *Why are pulsars hard to find?.* The University of Manchester (United Kingdom). https://www.research.manchester.ac.uk/portal/files/54588348/FULL_TEXT.PDF.\n",
     "    \n",
-    "Lyon, R.J., Stappers, B.W., Cooper, S., Brooke, J.M., Knowles, J.D. (2016b). Fifty years of pulsar \n",
-    "    candidate selection: From simple filters to a new principled real-time classification approach. Monthly Notices of the \n",
+    "Lyon, R. J., Stappers, B. W., Cooper, S., Brooke, J. M., Knowles, J. D. (2016). *Fifty years of pulsar \n",
+    "    candidate selection: From simple filters to a new principled real-time classification approach.* Monthly Notices of the \n",
     "    Royal Astronomical Society, 459(1), 1104—1123. Doi: 10.1093/mnras/stw656. \n",
     "\n",
-    "NASA. (2014, February 10). NASA | What is a pulsar? Youtube. Retrieved April 9, 2022, from https://www.youtube.com/watch?v=gjLk_72V9Bw&ab_channel=NASAGoddard\n",
+    "NASA. [NASA Goddard]. (2014, February 10). *NASA | What is a pulsar?* [Video]. Youtube. https://www.youtube.com/watch?v=gjLk_72V9Bw&ab_channel=NASAGoddard.\n",
     "\n"
    ]
   }
